Added buttons and score count to the game

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 
 <body>
 
+    <div id="resultDiv">
+        <h1 class="gameText" id="playerText">Player: </h1>
+        <h1 class="gameText" id="computerText">Computer: </h1>
+        <h1 class="gameText" id="result">Result: </h1>
+    </div>
+
+    <button id="btn">Rock</button>
+    <button id="btn">Paper</button>
+    <button id="btn">Scissors</button>
+
     <script src="script.js"></script>
 
 </body>
